# xmr-multisweeper

./: .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp  multisweeper.cpp  multisweeper.hpp  sweeper_utils.hpp
cmake/: FindHIDAPI.cmake
tests/: CMakeLists.txt  unit_tests.cpp
